--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Alaui</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2.0, user-scalable=yes">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <style>
@@ -32,7 +33,30 @@
             <source src="/imgs/0907.mp4" type="video/mp4">
         </video>
     </div>
-    <div class="card mx-auto mt-4 shadow p-3 mb-5 bg-body-tertiary rounded" style="width: 30rem;">
+    <!--div class="card mx-auto mt-4 shadow p-3 mb-5 bg-body-tertiary rounded" style="width: 30rem;">
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="/imgs/23.png" class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                    <img src="/imgs/Illustration.png" class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                    <img src="/imgs/Illustration2.png" class="d-block w-100">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div-->
+    <div class="card mx-auto  mt-4 shadow p-3 mb-5 bg-body-tertiary rounded" style="max-width: 600px;">
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -56,29 +80,5 @@
         </div>
     </div>
 </div>
-<!--div class="container">
-    <div id="carouselControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="/imgs/23.png" class="d-block w-100">
-            </div>
-            <div class="carousel-item">
-                <img src="/imgs/Illustration.png" class="d-block w-100">
-            </div>
-            <div class="carousel-item">
-                <img src="/imgs/Illustration2.png" class="d-block w-100">
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselControls" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselControls" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
-</div-->
-
 </body>
 </html>
