--- a/navbar.html
+++ b/navbar.html
@@ -1,6 +1,8 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light bg-primary">
+<nav class="navbar navbar-expand-lg navbar-light bg-light bg-primary ">
     <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Fire Soul</a>
+        <a class="navbar-brand" href="index.html">
+            <img src="/imgs/logo.png" alt="Logo" width="53" height="40" class="d-inline-block align-text-top">
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -10,10 +12,7 @@
                     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Twitter</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Tiktok</a>
+                    <a class="nav-link" href="https://twitter.com/Laui_wi">Twitter</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
