--- a/navbar.html
+++ b/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light bg-primary ">
     <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-            <img src="/imgs/logo.png" alt="Logo" width="50" height="37" class="d-inline-block align-text-top">
+            <img src="/imgs/Logo_Final.png" alt="Logo" width="61" height="40" class="d-inline-block align-text-top">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -23,6 +23,7 @@
                         <li><a class="dropdown-item" href="chapter2.html">Chapter 2</a></li>
                         <li><a class="dropdown-item" href="chapter3.html">Chapter 3</a></li>
                         <li><a class="dropdown-item" href="chapter4.html">Chapter 4</a></li>
+                        <li><a class="dropdown-item" href="chapter5.html">Chapter 5</a></li>
                     </ul>
                 </li>
             </ul>
